Averia de nieve

--- a/pagina2.html
+++ b/pagina2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>navidad</title>
     <link type="text/css" rel="stylesheet" href="css/resetCSS.css">
     <link type="text/css" rel="stylesheet" href="css/estilo.css">
+    <script src="js/nieve.js"></script>
 </head>
-<body onLoad="iniNevada(400,100)" style="background:#245da8">
+<body  style="background:#245da8">
 
 <header id="cabecera">
 
@@ -25,7 +26,7 @@
     </div>
 </div>
 
-<script src="js/nieve.js"></script>
+
 <footer>
 
 </footer>
