--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
 
 <div id="caja1">
+    <div id="adorno">
+        <img src="img/adorno.png">
+    </div>
     <div id="caja2">
         <img src="img/Portada.jpg">
     </div>
-
+    <div id="adorno2">
+        <img src="img/adorno.png">
+    </div>
 
 
 </div>
