--- a/pagina2.html
+++ b/pagina2.html
@@ -19,7 +19,8 @@
         <img src="img/derechosDeLosNiños.jpg">
     </div>
     <div id="contenedor2">
-
+        <iframe width="900" height="600" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div id="contenedor3">
 
