--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Navidad</title>
@@ -9,6 +9,9 @@
 <body>
 
 <div id="caja1">
+    <div id="franjaAzul">
+
+    </div>
     <div id="adorno">
         <img src="img/adorno.png">
     </div>
@@ -18,7 +21,9 @@
     <div id="adorno2">
         <img src="img/adorno.png">
     </div>
+    <div id="franjaAzulinferior">
 
+    </div>
 
 </div>
 </body>
