--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Navidad</title>
     <link type="text/css" rel="stylesheet" href="css/resetCSS.css">
-    <link type="text/css" rel="stylesheet" href="css/estilo.css">
+    <!-- <link type="text/css" rel="stylesheet" href="css/estiloPixeles.css"> -->
+    <link type="text/css" rel="stylesheet" href="css/estiloPorcentajes.css">
 </head>
 <body>
 
