--- a/pagina2.html
+++ b/pagina2.html
@@ -2,36 +2,59 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>navidad</title>
+    <title>Navidad</title>
     <link type="text/css" rel="stylesheet" href="css/resetCSS.css">
-    <link type="text/css" rel="stylesheet" href="css/estilo.css">
+    <!-- <link type="text/css" rel="stylesheet" href="css/estiloPixeles.css"> -->
+    <link type="text/css" rel="stylesheet" href="css/estiloPorcentajes.css">
+
     <script src="js/nieve.js"></script>
 </head>
-<body  style="background:#245da8">
+<body  onload="" style="background:#245da8">
 
 <header id="cabecera">
-
+    <img src="img/Cabecera.jpg">
 </header>
 
 
 <div id="main">
-    <div id="contenedor1">
-        <img src="img/derechosDeLosNiños.jpg">
+    <div id="contenedorExterno1">
+        <div id="contenedor1">
+            <img src="img/derechosDeLosNiños.jpg">
+        </div>
     </div>
-    <div id="contenedor2">
-        <iframe width="900" height="600" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div id="contenedorExterno2">
+        <div id="contenedor2">
+            <iframe width="900" height="600" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
-    <div id="contenedor3">
+    <div id="contenedorExterno3">
+        <div id="contenedor3">
+            <div id="conteinerInterno1">
 
+            </div>
+            <div id="conteinerInterno2">
+
+            </div>
+        </div>
     </div>
+
 </div>
 
 
 <footer>
-
+    <a>Enlace</a>
+    <a>Enlace</a>
+    <div id="social1">
+        <img src="img/Instagram.png">
+    </div>
+    <div id="social2">
+        <img src="img/facebook.png">
+    </div>
+    <div id="social3">
+        <img src="img/twitter.png">
+    </div>
 </footer>
 
 
 </body>
-</html>
