--- a/pagina2.html
+++ b/pagina2.html
@@ -6,11 +6,31 @@
     <link type="text/css" rel="stylesheet" href="css/resetCSS.css">
     <!-- <link type="text/css" rel="stylesheet" href="css/estiloPixeles.css"> -->
     <link type="text/css" rel="stylesheet" href="css/estiloPorcentajes.css">
-
+    <script src="js/interacion.js"></script>
     <script src="js/nieve.js"></script>
 </head>
-<body  onload="" style="background:#245da8">
+<body  onload="iniNevada(1000,80)" style="background:#245da8">
+<div id="caja1">
+    <div id="franjaAzul">
 
+    </div>
+    <div id="adorno">
+        <img src="img/adorno.png">
+    </div>
+    <div id="caja2">
+        <img src="img/Portada.jpg">
+    </div>
+    <div id="adorno2">
+        <img src="img/adorno.png">
+    </div>
+    <div id="boton">
+        <a onclick=ocultarfrontal() href="#" class="rainbow-button" alt="Siguiente"></a>
+    </div>
+    <div id="franjaAzulinferior">
+
+    </div>
+
+</div>
 <header id="cabecera">
     <img src="img/Cabecera.jpg">
 </header>
