--- a/pagina2.html
+++ b/pagina2.html
@@ -9,8 +9,8 @@
     <script src="js/interacion.js"></script>
     <script src="js/nieve.js"></script>
 </head>
-<body  onload="iniNevada(1000,80)" style="background:#245da8">
-<div id="caja1">
+<body  onload="iniNevada(300,80)" >
+<div id="caja1" >
     <div id="franjaAzul">
 
     </div>
@@ -32,7 +32,7 @@
 
 </div>
 <header id="cabecera">
-    <img src="img/Cabecera.jpg">
+    <img src="img/canva-rojo.jpg">
 </header>
 
 
@@ -41,30 +41,53 @@
         <div id="contenedor1">
             <img src="img/derechosDeLosNiños.jpg">
         </div>
+
+        <div id="ventana1">
+            <a onclick=change() href="#" class="rainbow-button2" ><img src="img/flecha.png"></a>
+        </div>
     </div>
     <div id="contenedorExterno2">
         <div id="contenedor2">
-            <iframe width="900" height="600" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
+            <iframe width="1000" height="700" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div id="ventana2">
+            <a onclick=change() href="#" class="rainbow-button2" ><img src="img/flecha.png"></a>
         </div>
     </div>
     <div id="contenedorExterno3">
         <div id="contenedor3">
             <div id="conteinerInterno1">
-
+                <img src="img/SanIgnacio.jpg">
             </div>
             <div id="conteinerInterno2">
-
+                <img src="img/FelizNavidadPortal.gif">
             </div>
+        </div>
+        <div id="ventana3">
+            <a onclick=change() href="#" class="rainbow-button2" ><img src="img/flecha.png"></a>
         </div>
     </div>
 
 </div>
 
 
-<footer>
-    <a>Enlace</a>
-    <a>Enlace</a>
+<footer >
+    <a class="enlace">Enlace</a>
+    <a class="enlace">Enlace</a>
+
+    <div id="logo">
+        <img src="img/logojesuitas.png">
+    </div>
+
+
+    <audio id="reproductor" src="audio/Noche%20De%20Paz.mp3" controls="controls" type="audio/mpeg" preload="preload" autoplay="autoplay">
+    </audio>
+
+
+
+
+
     <div id="social1">
         <img src="img/Instagram.png">
     </div>
@@ -74,6 +97,9 @@
     <div id="social3">
         <img src="img/twitter.png">
     </div>
+
+
+
 </footer>
 
 
