--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div id="contenedorExterno2">
         <div id="contenedor2">
-            <iframe width="900" height="600" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
+            <iframe width="90%" height="100%" src="https://www.youtube.com/embed/RLOyUUqx0IQ" title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="ventana2">
@@ -73,8 +73,8 @@
 
 
 <footer >
-    <a class="enlace">Enlace</a>
-    <a class="enlace">Enlace</a>
+    <a class="enlace" href="https://fundacionloyola.com/vguadalupe/">Fundacion Loyola</a>
+    <a class="enlace">Conctacto</a>
 
     <div id="logo">
         <img src="img/logojesuitas.png">
@@ -89,13 +89,13 @@
 
 
     <div id="social1">
-        <img src="img/Instagram.png">
+        <a href="https://www.instagram.com/edvguadalupe/"><img src="img/Instagram.png"></a>
     </div>
     <div id="social2">
-        <img src="img/facebook.png">
+        <a href="https://www.facebook.com/esc.dep.guadalupe/?rf=123708014325219"><img src="img/facebook.png"></a>
     </div>
     <div id="social3">
-        <img src="img/twitter.png">
+        <a href="https://twitter.com/escuelaevg"><img src="img/twitter.png"></a>
     </div>
 
 
